--- a/v/latest/index.html
+++ b/v/latest/index.html
@@ -46,9 +46,9 @@
   <meta name="citation_fulltext_html_url" content="https://banyekalaok.github.io/cee498report/" />
   <meta name="citation_pdf_url" content="https://banyekalaok.github.io/cee498report/manuscript.pdf" />
   <link rel="alternate" type="application/pdf" href="https://banyekalaok.github.io/cee498report/manuscript.pdf" />
-  <link rel="alternate" type="text/html" href="https://banyekalaok.github.io/cee498report/v/6d18ad5d43b182cdb7f2122f7b66799e0623bba5/" />
-  <meta name="manubot_html_url_versioned" content="https://banyekalaok.github.io/cee498report/v/6d18ad5d43b182cdb7f2122f7b66799e0623bba5/" />
-  <meta name="manubot_pdf_url_versioned" content="https://banyekalaok.github.io/cee498report/v/6d18ad5d43b182cdb7f2122f7b66799e0623bba5/manuscript.pdf" />
+  <link rel="alternate" type="text/html" href="https://banyekalaok.github.io/cee498report/v/e0e40b541906218242481e4c242d2c0d55b9c66d/" />
+  <meta name="manubot_html_url_versioned" content="https://banyekalaok.github.io/cee498report/v/e0e40b541906218242481e4c242d2c0d55b9c66d/" />
+  <meta name="manubot_pdf_url_versioned" content="https://banyekalaok.github.io/cee498report/v/e0e40b541906218242481e4c242d2c0d55b9c66d/manuscript.pdf" />
   <meta property="og:type" content="article" />
   <meta property="twitter:card" content="summary_large_image" />
   <link rel="icon" type="image/png" sizes="192x192" href="https://manubot.org/favicon-192x192.png" />
@@ -62,9 +62,9 @@
 </header>
 <p><small><em>
 This manuscript
-(<a href="https://banyekalaok.github.io/cee498report/v/6d18ad5d43b182cdb7f2122f7b66799e0623bba5/">permalink</a>)
+(<a href="https://banyekalaok.github.io/cee498report/v/e0e40b541906218242481e4c242d2c0d55b9c66d/">permalink</a>)
 was automatically generated
-from <a href="https://github.com/banyekalaok/cee498report/tree/6d18ad5d43b182cdb7f2122f7b66799e0623bba5">banyekalaok/cee498report@6d18ad5</a>
+from <a href="https://github.com/banyekalaok/cee498report/tree/e0e40b541906218242481e4c242d2c0d55b9c66d">banyekalaok/cee498report@e0e40b5</a>
 on December 6, 2020.
 </em></small></p>
 <h2 id="authors">Authors</h2>
@@ -89,13 +89,12 @@ Department of Civil Engineering, University of Illinois, Champaign-Urbana
 </div>
 <h2 id="background">1.1 Background</h2>
 <p>Bus operations are complex systems as they function at the intersection of transportation infrastructure and planning based on continually evolving user patterns.
-If we can predict the passenger loads, bus system can be run more efficiently and economically. Therefore, we investigated the ridership of the CUMTD bus system to attempt to find the optimal way to predict load averages (avg # of passengers onboard during a trip).
-A lot of cities are currently implementing congestion pricing to ease traffic congestion or decrease pollution. But what is congestion pricing and why does it is it effective?</p>
+If we can predict the passenger loads, bus system can be run more efficiently and economically. Therefore, we investigated the ridership of the CUMTD bus system to attempt to find the optimal way to predict load averages (avg # of passengers onboard during a trip).</p>
 <h2 id="dataset-overview">1.2 Dataset Overview</h2>
-<p>We received 3 datasets containing route performance and bus ridership data from CUMTD. For this project, we focused on the bus ridership per trip weekday data for the month of August. We will find the most appropriate variables for the accuracy of our prediction, and choose the optimal machine learning model for Kaggle competition.</p>
+<p>We received 3 datasets containing route performance and bus ridership data from CUMTD. For this project, we focused on the bus ridership per trip weekday data for the month of August. We will find the most appropriate variables for the accuracy of our prediction, and choose the optimal machine learning model for Kaggle competition. ‘df_ridership’ dataset shows the ridership situation and has 30171 data points. Its index includes the line number, trip ID and the date, and it has block ID, course ID, pattern name, scheduled start time, scheduled end time, P-stops, M-stops, vehicle ID, vehicle type name, capacity, full capacity, practical capacity, load factor, practical load factor, total boarding number, total alighting number, average load, minimum load, maximum load, passenger miles, and passenger miles factor. In specific, M-stops means that the number of stops at scheduled stop points, P-stops means that the number of stops at scheduled stop points and of unscheduled stops with passenger interaction.</p>
 <div id="tbl:constant-digits" class="tablenos">
 <table style="width:100%;">
-<caption><span>Table 1:</span> Ridershippertrip_PerTrip-AugustWeekdays9-9
+<caption><span>Table 1:</span> Ridership Per Trip in August Weekdays
 </caption>
 <colgroup>
 <col style="width: 3%" />
@@ -171,9 +170,8 @@ A lot of cities are currently implementing congestion pricing to ease traffic co
 <td style="text-align: center;">BLUE[V:0001]</td>
 <td style="text-align: center;">402</td>
 <td style="text-align: center;">1290495</td>
-<td style="text-align: center;"><span class="citation" data-cites="124.0.137636458">[<span class="citeproc-not-found" data-reference-id="124.0.137636458"><strong>???</strong></span>@]</span></td>
-<td style="text-align: center;">BLUE</td>
-<td style="text-align: center;">3</td>
+<td style="text-align: center;">124.0.137636458</td>
+<td style="text-align: center;">BLUE 3</td>
 <td style="text-align: center;">6:43:00</td>
 <td style="text-align: center;">7:03:00</td>
 <td style="text-align: center;">0</td>
@@ -195,6 +193,7 @@ A lot of cities are currently implementing congestion pricing to ease traffic co
 <td style="text-align: center;"></td>
 <td style="text-align: center;">0</td>
 <td style="text-align: center;">0</td>
+<td style="text-align: center;"></td>
 </tr>
 <tr class="even">
 <td style="text-align: left;">2</td>
@@ -203,9 +202,8 @@ A lot of cities are currently implementing congestion pricing to ease traffic co
 <td style="text-align: center;">BLUE[V:0001]</td>
 <td style="text-align: center;">402</td>
 <td style="text-align: center;">1290495</td>
-<td style="text-align: center;"><span class="citation" data-cites="124.0.137636458">[<span class="citeproc-not-found" data-reference-id="124.0.137636458"><strong>???</strong></span>@]</span></td>
-<td style="text-align: center;">BLUE</td>
-<td style="text-align: center;">51</td>
+<td style="text-align: center;">124.0.137636458</td>
+<td style="text-align: center;">BLUE 51</td>
 <td style="text-align: center;">7:03:00</td>
 <td style="text-align: center;">7:35:00</td>
 <td style="text-align: center;">5</td>
@@ -227,6 +225,7 @@ A lot of cities are currently implementing congestion pricing to ease traffic co
 <td style="text-align: center;"></td>
 <td style="text-align: center;">7.02</td>
 <td style="text-align: center;">0</td>
+<td style="text-align: center;"></td>
 </tr>
 <tr class="odd">
 <td style="text-align: left;">3</td>
@@ -235,9 +234,8 @@ A lot of cities are currently implementing congestion pricing to ease traffic co
 <td style="text-align: center;">BLUE[V:0001]</td>
 <td style="text-align: center;">402</td>
 <td style="text-align: center;">1290495</td>
-<td style="text-align: center;"><span class="citation" data-cites="124.0.137636458">[<span class="citeproc-not-found" data-reference-id="124.0.137636458"><strong>???</strong></span>@]</span></td>
-<td style="text-align: center;">4W</td>
-<td style="text-align: center;">3</td>
+<td style="text-align: center;">124.0.137636458]</td>
+<td style="text-align: center;">4W 3</td>
 <td style="text-align: center;">7:40:00</td>
 <td style="text-align: center;">8:13:00</td>
 <td style="text-align: center;">4</td>
@@ -259,6 +257,7 @@ A lot of cities are currently implementing congestion pricing to ease traffic co
 <td style="text-align: center;"></td>
 <td style="text-align: center;">0</td>
 <td style="text-align: center;">0</td>
+<td style="text-align: center;"></td>
 </tr>
 <tr class="even">
 <td style="text-align: left;">4</td>
@@ -267,9 +266,8 @@ A lot of cities are currently implementing congestion pricing to ease traffic co
 <td style="text-align: center;">BLUE[V:0001]</td>
 <td style="text-align: center;">402</td>
 <td style="text-align: center;">1290495</td>
-<td style="text-align: center;"><span class="citation" data-cites="124.0.137636458">[<span class="citeproc-not-found" data-reference-id="124.0.137636458"><strong>???</strong></span>@]</span></td>
-<td style="text-align: center;">BLUE</td>
-<td style="text-align: center;">51</td>
+<td style="text-align: center;">124.0.137636458]</td>
+<td style="text-align: center;">BLUE 51</td>
 <td style="text-align: center;">8:17:00</td>
 <td style="text-align: center;">8:51:00</td>
 <td style="text-align: center;">8</td>
@@ -291,6 +289,7 @@ A lot of cities are currently implementing congestion pricing to ease traffic co
 <td style="text-align: center;"></td>
 <td style="text-align: center;">4.68</td>
 <td style="text-align: center;">0</td>
+<td style="text-align: center;"></td>
 </tr>
 <tr class="odd">
 <td style="text-align: left;">5</td>
@@ -299,9 +298,8 @@ A lot of cities are currently implementing congestion pricing to ease traffic co
 <td style="text-align: center;">BLUE[V:0001]</td>
 <td style="text-align: center;">402</td>
 <td style="text-align: center;">1290495</td>
-<td style="text-align: center;"><span class="citation" data-cites="124.0.137636458">[<span class="citeproc-not-found" data-reference-id="124.0.137636458"><strong>???</strong></span>@]</span></td>
-<td style="text-align: center;">4W</td>
-<td style="text-align: center;">3</td>
+<td style="text-align: center;">124.0.137636458</td>
+<td style="text-align: center;">4W 3</td>
 <td style="text-align: center;">8:51:00</td>
 <td style="text-align: center;">9:24:00</td>
 <td style="text-align: center;">7</td>
@@ -323,6 +321,7 @@ A lot of cities are currently implementing congestion pricing to ease traffic co
 <td style="text-align: center;"></td>
 <td style="text-align: center;">4.27</td>
 <td style="text-align: center;">0</td>
+<td style="text-align: center;"></td>
 </tr>
 </tbody>
 </table>
@@ -426,17 +425,11 @@ The following section summarizes the EDA results that are relevant to the model 
 <p>Models learn best and fasted when the data is scaled, most commonly between values of -1 and 1 or 0 and 1. Since, all the numerical values are greater than 0, the numerical features were scaled using normalization (scaling from 0 to 1).</p>
 <h4 id="standardization-z-score-normalization">Standardization (Z-score Normalization)</h4>
 <p>In the standardization, the core idea is to convert each feature in the data so that the mean value of each feature is 0 and the standard deviation is 1. The general method of calculation is to determine the distribution mean and standard deviation for each feature. The formula showing how to transform the values is shown as follow.</p>
-<figure>
-<img src="images/z-score.png" alt="" />
-</figure>
 <p><strong>Figure x. Z-score Normalization</strong></p>
 <h3 id="converting-categorical-features-to-numerical">Converting Categorical Features to Numerical</h3>
 <p>To allow the model to learn from the categorical features, they need to be converted to numerical features. The following section details how the conversions were conducted.</p>
 <h3 id="one-hot-coding">One-hot coding</h3>
 <p>Since most machine learning algorithms require numerical input and output variables. We have three categorical data now. We can use the one hot encoding to convert categorical data to integer data. <strong>Figure x</strong> is an example of how a dataframe looks like after one hot encoding. In python, we can use panda’s ‘pd.get_dummies’ function to achieve this. however, we find that the accuracy of model will be less after adding the these three features into our training data. Then we decided to drop all of them.</p>
-<figure>
-<img src="images/onehot.png" alt="" />
-</figure>
 <p><strong>Figure x. One-hot Coding Example</strong></p>
 <ul>
 <li>The EDA revealed that there are 39 unique lines that conduct a wide range of rides from 2 to 1,300. Since the line is a strong predicator of bus loads (i.e., popular lines will likely have larger loads), the line were converted via one-hot encoding.</li>
@@ -479,10 +472,6 @@ The following section summarizes the EDA results that are relevant to the model 
 <li><p>Boosting models try predictors sequentially, and the subsequent model attempts to fix the errors of its predecessor.</p></li>
 <li><p>Gradient boosting is a type of boosting algorithm. It relies on the intuition that the best possible next model, when combined with previous models, minimizes the overall prediction error.</p></li>
 </ul>
-<figure>
-<img src="images/GradientBoosting.png" alt="" />
-</figure>
-<p><strong>Figure x. Gradient Boosting Algorithm</strong></p>
 <p>The Hyperparameters used in the model are shown as follow. The reason why each parameter has more than one number is that we also use the <strong>grid search</strong> method.
 * max_depth: [3, 10]
 * learning_rate: [0.1, 0.03]
@@ -496,9 +485,6 @@ The following section summarizes the EDA results that are relevant to the model 
 <li><p>If a point falls below this line, then for this input we can know prediction &lt; target.</p></li>
 <li><p>The farther the point is from the line, the less accurate the prediction.</p></li>
 </ul>
-<figure>
-<img src="images/T_P.png" alt="" />
-</figure>
 <p><strong>Figure x. Predictions VS Targets</strong></p>
 <h1 id="chapter-5.-conclusions">Chapter 5. Conclusions</h1>
 <p>As was shown in chapter 4 the most predictive model was able to predict the load average with 0.98 accuracy. Some factors need to be taken into consdieration about this process:</p>
