--- a/v/latest/index.html
+++ b/v/latest/index.html
@@ -46,9 +46,9 @@
   <meta name="citation_fulltext_html_url" content="https://banyekalaok.github.io/cee498report/" />
   <meta name="citation_pdf_url" content="https://banyekalaok.github.io/cee498report/manuscript.pdf" />
   <link rel="alternate" type="application/pdf" href="https://banyekalaok.github.io/cee498report/manuscript.pdf" />
-  <link rel="alternate" type="text/html" href="https://banyekalaok.github.io/cee498report/v/ca9613909414ffdaf12d9f7fa05074f0b1ca227f/" />
-  <meta name="manubot_html_url_versioned" content="https://banyekalaok.github.io/cee498report/v/ca9613909414ffdaf12d9f7fa05074f0b1ca227f/" />
-  <meta name="manubot_pdf_url_versioned" content="https://banyekalaok.github.io/cee498report/v/ca9613909414ffdaf12d9f7fa05074f0b1ca227f/manuscript.pdf" />
+  <link rel="alternate" type="text/html" href="https://banyekalaok.github.io/cee498report/v/ff93a1306edc36bbc07909ddccc6aa9362abe989/" />
+  <meta name="manubot_html_url_versioned" content="https://banyekalaok.github.io/cee498report/v/ff93a1306edc36bbc07909ddccc6aa9362abe989/" />
+  <meta name="manubot_pdf_url_versioned" content="https://banyekalaok.github.io/cee498report/v/ff93a1306edc36bbc07909ddccc6aa9362abe989/manuscript.pdf" />
   <meta property="og:type" content="article" />
   <meta property="twitter:card" content="summary_large_image" />
   <link rel="icon" type="image/png" sizes="192x192" href="https://manubot.org/favicon-192x192.png" />
@@ -62,9 +62,9 @@
 </header>
 <p><small><em>
 This manuscript
-(<a href="https://banyekalaok.github.io/cee498report/v/ca9613909414ffdaf12d9f7fa05074f0b1ca227f/">permalink</a>)
+(<a href="https://banyekalaok.github.io/cee498report/v/ff93a1306edc36bbc07909ddccc6aa9362abe989/">permalink</a>)
 was automatically generated
-from <a href="https://github.com/banyekalaok/cee498report/tree/ca9613909414ffdaf12d9f7fa05074f0b1ca227f">banyekalaok/cee498report@ca96139</a>
+from <a href="https://github.com/banyekalaok/cee498report/tree/ff93a1306edc36bbc07909ddccc6aa9362abe989">banyekalaok/cee498report@ff93a13</a>
 on December 6, 2020.
 </em></small></p>
 <h2 id="authors">Authors</h2>
@@ -375,6 +375,7 @@ The following section summarizes the EDA results that are relevant to the model 
 <img src="images/load_avg_in_all_days(average).png" alt="" /><figcaption><span>Figure 2:</span> Load Avg for all buses in average</figcaption>
 </figure>
 </div>
+<p><em>Note: In the left figure, “Ex” stands for express buses, “H” stands for Hopper, “L” stands for late night buses, “M” stands for maintenance buses and “T” stands for training buses</em></p>
 <p>What’s more, to compare the characteristic of each bus line on each day of August, we separate the load average in each into different serving days, which shows as below. Moreover, to find its own difference of each bus route, especially the difference between summer holidays and the opening week of the new semester, we combine the load average of each line in different days and plot them together, which shows as below.</p>
 <div id="fig:tall-image" class="fignos">
 <figure>
