--- a/manuscript.html
+++ b/manuscript.html
@@ -59,9 +59,9 @@
   <meta name="citation_fulltext_html_url" content="https://banyekalaok.github.io/cee498report/" />
   <meta name="citation_pdf_url" content="https://banyekalaok.github.io/cee498report/manuscript.pdf" />
   <link rel="alternate" type="application/pdf" href="https://banyekalaok.github.io/cee498report/manuscript.pdf" />
-  <link rel="alternate" type="text/html" href="https://banyekalaok.github.io/cee498report/v/c84c1399f2c7011b78e02d45ab27cdcc8369958e/" />
-  <meta name="manubot_html_url_versioned" content="https://banyekalaok.github.io/cee498report/v/c84c1399f2c7011b78e02d45ab27cdcc8369958e/" />
-  <meta name="manubot_pdf_url_versioned" content="https://banyekalaok.github.io/cee498report/v/c84c1399f2c7011b78e02d45ab27cdcc8369958e/manuscript.pdf" />
+  <link rel="alternate" type="text/html" href="https://banyekalaok.github.io/cee498report/v/4b129001be6fbdf95f4daa23c8d6d7695f125bbb/" />
+  <meta name="manubot_html_url_versioned" content="https://banyekalaok.github.io/cee498report/v/4b129001be6fbdf95f4daa23c8d6d7695f125bbb/" />
+  <meta name="manubot_pdf_url_versioned" content="https://banyekalaok.github.io/cee498report/v/4b129001be6fbdf95f4daa23c8d6d7695f125bbb/manuscript.pdf" />
   <meta property="og:type" content="article" />
   <meta property="twitter:card" content="summary_large_image" />
   <link rel="icon" type="image/png" sizes="192x192" href="https://manubot.org/favicon-192x192.png" />
@@ -75,9 +75,9 @@
 </header>
 <p><small><em>
 This manuscript
-(<a href="https://banyekalaok.github.io/cee498report/v/c84c1399f2c7011b78e02d45ab27cdcc8369958e/">permalink</a>)
+(<a href="https://banyekalaok.github.io/cee498report/v/4b129001be6fbdf95f4daa23c8d6d7695f125bbb/">permalink</a>)
 was automatically generated
-from <a href="https://github.com/banyekalaok/cee498report/tree/c84c1399f2c7011b78e02d45ab27cdcc8369958e">banyekalaok/cee498report@c84c139</a>
+from <a href="https://github.com/banyekalaok/cee498report/tree/4b129001be6fbdf95f4daa23c8d6d7695f125bbb">banyekalaok/cee498report@4b12900</a>
 on December 6, 2020.
 </em></small></p>
 <h2 id="authors">Authors</h2>
@@ -120,7 +120,7 @@ Department of Civil Engineering, University of Illinois, Champaign-Urbana
 </small></p></li>
 </ul>
 <h1 id="chapter-1.-introduction">Chapter 1. Introduction</h1>
-<p>As part of the course project for the class, project group 7 acquired bus ridership per trip weekday data (from here on referred to as <strong>bus data</strong>) for the month of August from the Champaign-Urbana MTD bus organization (CUMTD). To supplement the bus data, CUMTD provided a manual that explains the process and methodology used to track, monitor and acquire the bus data. Figure <a href="#fig:wide-image">1</a> gives an overview of the CUMTD area.</p>
+<p>As part of the course project for the class, project group 7 acquired bus ridership per trip weekday data (from here on referred to as <strong>bus data</strong>) for the month of August from the Champaign-Urbana MTD bus organization (CUMTD). To supplement the bus data, CUMTD provided a manual that explains the process and methodology used to track, monitor and acquire the bus data. Figure <a href="#fig:wide-image">12</a> gives an overview of the CUMTD area.</p>
 <div id="fig:wide-image" class="fignos">
 <figure>
 <img src="images/Figure1.png" alt="" /><figcaption><span>Figure 1:</span> <strong>CUMTD Route Map</strong></figcaption>
@@ -393,26 +393,32 @@ The bus data was then assessed for meaningful ways it can be subdivided based on
 <img src="images/Load_Avg_weekdays.png" alt="" /><figcaption><span>Figure 2:</span> <strong>Load Avg in weekdays</strong></figcaption>
 </figure>
 </div>
+<div id="fig:square-image" class="fignos">
 <figure>
-<img src="images/Load_Avg_duration.png" alt="" /><figcaption><strong>Duration of Load Avg</strong></figcaption>
+<img src="images/Load_Avg_duration.png" alt="" /><figcaption><span>Figure 3:</span> <strong>Duration of Load Avg</strong></figcaption>
 </figure>
+</div>
 <p>Notice that Monday, the start of the work week, has the most trips. Since we only have 1 month of data (August), no strong conclusions can be made at this point.
 The following section summarizes the EDA results that are relevant to the model development effort.</p>
 <h3 id="dependent-variables">Dependent Variables</h3>
 <p>One of the unique challenges faced in this data was what to do with the time data (schedule start and end times). Firstly, the data was provided as strings, therefore, they needed to be converted to datetime format. Secondly, some of the data entries that were not on the conventional 24-hr time format, i.e., some times were between 24:00 and 26:00 hours. This is likely because the timestamps represent the bus driver workshifts. Workshifts are easier to monitor and track on a continous scale from clock-in to clock-out than to break-up because of the start of a new day. A function was created to correct the time to be in the 24-hr format then the times were used to determine the duration of a trip (schedule end time - schedule start time).</p>
 <h2 id="investigating-data-inisghts">2.2 Investigating Data Inisghts</h2>
 <p>First, we dropped all the empty columns and columns with categorical values or string values, which can not be used as inputs to train the model. Then a heatmap is used to show the pair-wise correlation between the remaining features and our target ‘Load avg’, which gives us an idea which features might be the most predictive and which features we should drop because of a poor correlation with our target.</p>
+<div id="fig:square-image" class="fignos">
 <figure>
-<img src="images/eda6.png" alt="" /><figcaption><strong>correlation heat map</strong></figcaption>
+<img src="images/eda6.png" alt="" /><figcaption><span>Figure 4:</span> <strong>correlation heat map</strong></figcaption>
 </figure>
+</div>
 <p>Then, a pairwise scatter plot is used to show the degree of linearity of the relationship between each feature, which gives us a rough idea as to what kind of model should be used.</p>
+<div id="fig:wide-image" class="fignos">
 <figure>
-<img src="images/eda7.png" alt="" /><figcaption><strong>correlation heat map</strong></figcaption>
+<img src="images/eda7.png" alt="" /><figcaption><span>Figure 5:</span> <strong>correlation heat map</strong></figcaption>
 </figure>
+</div>
 <p>Also, for CUMTD, different bus lines serve specific groups of people. In this way, it is important to find the characteristic of each bus line during August. First, we create different Dataframe for different bus line. Since the bus name is not easy to show in graphs, we use <a href="http://mtd.org/maps-and-schedules/routes/">Number of Routes’ Names in CUMTD</a> to instead. For some bus line which has different types of bus number based on different routes or different service timeline (for example, 1 Yellow serves during weekdays’ morning and afternoon, and 100 Yellow serves during weekdays’ evening and the whole weekends; 5 Green have normal line and express line or hopper line which similar but different routes), we separate all of them into different name and expressions. After that, we pick up their statistic of “Load Average” in average, and combine with comparison, showing as below. (Note: In the left figure, “Ex” stands for express buses, “H” stands for Hopper, “L” stands for late night buses, “M” stands for maintenance buses and “T” stands for training buses)</p>
 <div id="fig:square-image" class="fignos">
 <figure>
-<img src="images/load_avg_in_all_days(average).png" alt="" /><figcaption><span>Figure 3:</span> <strong>Load Avg for all buses in average</strong></figcaption>
+<img src="images/load_avg_in_all_days(average).png" alt="" /><figcaption><span>Figure 6:</span> <strong>Load Avg for all buses in average</strong></figcaption>
 </figure>
 </div>
 <p><em>Note: In the left figure, “Ex” stands for express buses, “H” stands for Hopper, “L” stands for late night buses, “M” stands for maintenance buses and “T” stands for training buses</em></p>
@@ -451,9 +457,11 @@ The following section summarizes the EDA results that are relevant to the model 
 <p>Data preprocessing is an indispensable step in machine learning. It is important to preprocess the data which should be prior to model development since the quality of the data can determine the final performance of our model.</p>
 <h3 id="handing-missing-data">Handing Missing Data</h3>
 <p>Data in the real world always have few missing values. This phenomena may be due to many reasons. There are many methods to handing missing values such as ignore the data row with missing value, replacing the missing value with mean or median value. <strong>Table x</strong> shows the top 8 percentage of missing value for each feature. 1.0 means all the values are missing. 0.0 means none of the data is missing. Here, the missing value of ‘Trip’ are filled with the mean of all the existing ‘Trip’ values. From the table we can know the eighth large of the percentage is already 0, which proves that there is no missing data for other features not appearing in the table.</p>
+<div id="fig:square-image" class="fignos">
 <figure>
-<img src="images/missingvalue.png" alt="" /><figcaption><strong>Table x Percentage of Missing Value</strong></figcaption>
+<img src="images/missingvalue.png" alt="" /><figcaption><span>Figure 7:</span> <strong>Percentage of Missing Value</strong></figcaption>
 </figure>
+</div>
 <h3 id="feature-scaling">Feature Scaling</h3>
 <p>Feature scaling is a method used to standardize independent variables or feature ranges of data. Since the value range of some original data is very different, the model will give more weight to the feature with large values in the learning process. However, in fact, the weight of each feature should not be considered in this way. In some machine learning algorithms, the objective function cannot work properly without normalization.</p>
 <p><strong>Figure #. Comparison of key predictive variables against load average.</strong></p>
@@ -477,29 +485,39 @@ The following section summarizes the EDA results that are relevant to the model 
 <p>The follow sections goes through a step by step process to develop and identify the best model to predict the load average on the test data.</p>
 <h2 id="establish-a-baseline-model">4.1 Establish a Baseline Model</h2>
 <p>Before building a complex model a baseline model was created that simply returns the load average using a fairly straight-forward support vector regression (SVR) model. SVR models are similar to linear regression models except that they minimize the model’s coefficients as opposed to the sum of the squared errors. In addition, SVR provides the flexibility to define an acceptable error level. The model then finds the best fit line to the data points. The figure below illustrates an SVR model.</p>
+<div id="fig:wide-image" class="fignos">
 <figure>
-<img src="images/SVR%20illustration.png" alt="" /><figcaption><strong>Illustration of support vector regression model</strong></figcaption>
+<img src="images/SVR%20illustration.png" alt="" /><figcaption><span>Figure 8:</span> <strong>Illustration of support vector regression model</strong></figcaption>
 </figure>
+</div>
 <p>The SVR developed in this project resulted in an accuracy of 47 percent and a root mean squared error of 2.44 and is shown in the figure below.</p>
+<div id="fig:wide-image" class="fignos">
 <figure>
-<img src="images/SVR%20Results.png" alt="" /><figcaption><strong>Support vector regression model results</strong></figcaption>
+<img src="images/SVR%20Results.png" alt="" /><figcaption><span>Figure 9:</span> <strong>Support vector regression model results</strong></figcaption>
 </figure>
+</div>
 <p>As expected, the baseline model does not fit the data well. The next section assesses if more complex models can produce results and performance.</p>
 <h2 id="develop-a-more-complex-model">4.2 Develop a More Complex Model</h2>
 <p>As can be seen, the dense linear model results in better (lower) metrics than the baseline model. However, the improvement in the model performance is not that significant. The next section assesses if a dense non-linear model can produce a better model with lower metrics.</p>
 <h3 id="neural-network-model">Neural Network Model</h3>
 <p>The neural network model has been taken in our team. As a subfield of machine learning, neural network model would input data, and then train themselves to recognize patterns found in data, finally output a set of similar data. Therefore, choosing neural network would process the data like human brain. In our project, it works very well and precisely, and predicts a correspondingly positive relationship between predictions and targets, shown in the <strong>Figure #</strong>. The targets are validation value, and the perditions are predicted value. As the result shows, predictions and targets are very consistent. The detail coding process would show as follows.</p>
+<div id="fig:wide-image" class="fignos">
 <figure>
-<img src="images/Neural%20target%20and%20prediction.png" alt="" /><figcaption><strong>Comparison between predictions and targets.</strong></figcaption>
+<img src="images/Neural%20target%20and%20prediction.png" alt="" /><figcaption><span>Figure 10:</span> <strong>Comparison between predictions and targets.</strong></figcaption>
 </figure>
+</div>
 <p>A typical neural network model would have three kinds of layers, which are input layer, hidden layer, and output layer, shown in <strong>Figure #</strong>. Among our teams, one of our neural network models contains 4 layers, composed by 1 input layer, 2 hidden layers, and 1 output layer. Both dense in hidden layers are 128, which is shown in Appendix.</p>
+<div id="fig:wide-image" class="fignos">
 <figure>
-<img src="images/Neural%20network.png" alt="" /><figcaption><strong>Nenural Network.</strong></figcaption>
+<img src="images/Neural%20network.png" alt="" /><figcaption><span>Figure 11:</span> <strong>Nenural Network.</strong></figcaption>
 </figure>
+</div>
 <p>When processing the code, in the training part, take learning rate to adjust weight correction. The formula is shown in <strong>Figure #</strong>. In every time, input signal into neural network model, and multiple learning rate, local gradient could correct the model sequentially. After all process done, the model would be optimized as precise as possible, similar to human brain.</p>
+<div id="fig:wide-image" class="fignos">
 <figure>
-<img src="images/Weight%20correction.png" alt="" /><figcaption><strong>Weight correction.</strong></figcaption>
+<img src="images/Weight%20correction.png" alt="" /><figcaption><span>Figure 12:</span> <strong>Weight correction.</strong></figcaption>
 </figure>
+</div>
 <p>In the neural network model, find an optimum way to weight correction is crucial. If a network performs well on the training data but very badly on testing set, the network might be over-trained, which is overfitting. On the other hand, if the network works bad on the training data, the network might be under-trained, which is underfitting. Besides, an under-trained network also performs badly on the testing set. A drawing to compare these would be shown in <strong>Figure #</strong>.</p>
 <figure>
 <img src="images/Plot%20in%20overfitting.png" alt="" /><figcaption><strong>Plot in overfitting,optimum, and underfitting.</strong></figcaption>
